@@ -119,3 +119,46 @@ size_t _hex2bin(const char *hex_str, unsigned char *byte_array, size_t byte_arra
 
     return byte_array_size;
 }
+
+/* via https://github.com/chmike/cst_time_memcmp
+
+Licensed as:
+
+The MIT License (MIT)
+
+Copyright (c) 2015 Christophe Meessen
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+
+This is the safest1 variant using subscriptions.
+
+*/
+int cst_time_memcmp(const void *m1, const void *m2, size_t n) {
+  int res = 0, diff;
+  if (m1 != m2 && n && m1 && m2) {
+    const unsigned char *pm1 = (const unsigned char *)m1;
+    const unsigned char *pm2 = (const unsigned char *)m2;
+    do {
+      --n;
+      diff = pm1[n] - pm2[n];
+      res = (res & (((diff - 1) & ~diff) >> 8)) | diff;
+    } while (n != 0);
+  }
+  return ((res - 1) >> 8) + (res >> 8) + 1;
+}
